# wireguard-pro

./: .gitgnore  .gitignore  Containerfile  LICENSE.md  Makefile  README.md  build.sh  error.txt  license.md  package-lock.json  pyproject.toml  requirements.txt
.github/: deploy.yaml
.github/workflows/: release.yml
container/: Caddyfile  add-iptables.sh  bootstrap.py  nftables-root.conf  nftables.conf  remove-iptables.sh
docs/: env.md  index.md  quickstart.md
quadlet/: add-iptables.sh  boringtun.socket  remove-iptables.sh  wireguard-pro.container  wireguard-pro.socket
secrets/: README.md  create_credentials.py
src/: __init__.py  api.py  app.py  auth.py  cli.py  config.py  db.py  main.py  peers.py  scheduler.py  utils.py
src/frontend/: angular.json  package-lock.json  package.json
src/frontend/src/: index.html  main.ts  styles.css
src/frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
src/frontend/src/app/auth/: auth.guard.spec.ts  auth.guard.ts  auth.service.ts  jwt.interceptor.ts
src/frontend/src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
src/frontend/src/app/peers/: peers.component.css  peers.component.html  peers.component.spec.ts  peers.component.ts
src/frontend/src/environments/: environment.ts
src/static/css/: style.css
src/static/js/: main.js
src/templates/: index.html
tests/performance/: Makefile  copy_benchmark.c  crypto_benchmark.c  ctxswitch_benchmark.c  malloc_benchmark.c  syscall_benchmark.c
tests/sys-performance/: crypto_benchmark.c
(+6 files in other folders)
