[project]
name = "wireguard-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "gunicorn>=25.3.0",
    "itsdangerous>=2.2.0",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.27",
    "tzlocal>=5.3.1",
    "uvicorn>=0.46.0",
]
